--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Gradescope", "pdfs", "pocketbase", "scoresight"]
+  "cSpell.words": ["Gradescope", "pdfs", "pocketbase", "scoresight", "typegen"]
 }
