add next.js files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Gradescope", "pdfs", "pocketbase", "scoresight", "typegen"]
+  "cSpell.words": [
+    "Gradescope",
+    "kahoot",
+    "pdfs",
+    "pocketbase",
+    "quizlet",
+    "scoresight",
+    "shadcn",
+    "typegen"
+  ]
 }
