add shadcn ui components

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "clsx",
     "Gradescope",
     "kahoot",
     "pdfs",
@@ -8,6 +9,7 @@
     "scoresight",
     "shadcn",
     "signup",
+    "tabler",
     "tanstack",
     "typegen"
   ]
