--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tabler/icons-react": "^3.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.2",
     "pocketbase": "^0.21.2",
     "react": "^18",
